# yang-mills-mass-gap-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: beta_finite_size_scaling.md  burnin_autocorrelation.md  correlated_spectroscopy_fits.md  correlated_uncertainty.md  creutz_ratios.md  dimensional_scaling.md  ensemble_statistics.md  ensemble_wilson_creutz.md  final_research_campaign.md  final_research_paper.md  final_research_paper_template.md  gauge_invariance.md  generalized_eigenvalue_problem.md  generic_gauge_lattice.md  gevp_bootstrap_uncertainty.md  glueball_correlators.md  lattice_gauge_theory.md  mass_gap_estimation.md  monte_carlo.md  operator_basis.md  overrelaxation.md  performance.md  principal_correlator_fits.md  reproducibility.md  spatial_smearing.md  spectroscopy.md  staple_updates.md  su3_extension.md  su3_finite_lattice_prototype.md  sun_architecture.md  validation.md  wilson_loops.md
experiments/: action_consistency_audit.py  beta_finite_size_scan.py  burnin_autocorrelation_diagnostics.py  correlated_principal_spectroscopy.py  correlated_spectroscopy_fit.py  correlated_uncertainty_analysis.py  creutz_string_tension_scan.py  dimension_comparison.py  ensemble_creutz_bootstrap.py  ensemble_mass_gap_scan.py  final_overrelaxation_campaign.py  gauge_invariance_validation.py  generalized_eigenvalue_spectroscopy.py  generic_backend_equivalence.py  gevp_bootstrap_uncertainty.py  glueball_correlator.py  glueball_mass_spectroscopy.py  group_backend_validation.py  mass_gap_scan.py  metropolis_su2_2d.py  operator_correlator_matrix.py  su2_2d_baseline.py  (+9 more)
(+92 files in other folders)
